@@ -1,5 +1,6 @@
 <!ENTITY  brandShortName        "Epiphany">
 <!ENTITY  brandFullName         "Epiphany @VERSION@">            
 <!ENTITY  vendorShortName       "GNOME">
+<!ENTITY  brandVersion          "@VERSION@">
 
 <!ENTITY  releaseURL            "http://www.gnome.org/projects/epiphany/">
