@@ -1,3 +1,4 @@
 brandShortName=Epiphany
 brandFullName=Epiphany @VERSION@
 vendorShortName=GNOME
+brandVersion=@VERSION@
