@@ -1,2 +1,3 @@
 override chrome://branding/locale/brand.properties file://@CHROMEDIR@/branding/brand.properties
 override chrome://branding/locale/brand.dtd file://@CHROMEDIR@/branding/brand.dtd
+override chrome://global/content/about.xhtml file:///@CHROMEDIR@/global/about.xhtml
