@@ -1,3 +1,14 @@
+2006-01-15  Crispin Flowerday  <gnome@flowerday.cx>
+
+	* data/chrome/Makefile.am:
+	* data/chrome/about.xhtml:
+	* data/chrome/brand.dtd.in:
+	* data/chrome/brand.properties.in:
+	* data/chrome/epiphany.manifest.in:
+
+	Override the page that is shown for the about: url so
+	that it doesn't say "Deer Park"
+
 2006-01-14  Chrhristian Persch  <chpe@cvs.gnome.org>
 
 	* embed/mozilla/Makefile.am:
